[package]
name = "bevy_ggf"
version = "0.1.0"
authors = ["Noah Shomette <noahshomette@gmail.com>"]
edition = "2021"
description = "A framework for creating grid based games in bevy"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/NoahShomette/bevy_ggf"
exclude = ["assets/*", "design/*", "tools/*"]
resolver = "2"

# workspace for tests and assorted
[workspace]
members = ["tools/ci"]

[badges]
maintenance = { status = "actively-developed" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9.1", features = ["bevy_asset", "bevy_scene", "bevy_gilrs", "bevy_winit", "animation", "x11", "png", "filesystem_watcher", "render", "serialize", ], default-features = false }
bevy_ecs_tilemap = "0.9.0"
leafwing-input-manager = "0.7.0"
iyes_loopless = { version = "0.9.1", features = ["states", "fixedtimestep", "app"] }
#bevy_pixel_camera = "0.2.1"   # waiting for it to bump to bevy 0.9
serde = { version = "1.0.125", features = ["derive"] }
typetag = "0.2.3"
downcast-rs = "1.2.0"
rand = "0.8.5"
