[package]
name = "bevy_ggf"
version = "0.1.1"
authors = ["Noah Shomette <noahshomette@gmail.com>"]
edition = "2021"
description = "A framework for creating grid based games in bevy"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/NoahShomette/bevy_ggf"
exclude = ["assets/*", "design/*", "tools/*"]
resolver = "2"

[features]
default = []
command_rollback = []

# workspace for tests and assorted
[workspace]
members = ["tools/ci"]

[badges]
maintenance = { status = "actively-developed" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9.*", features = ["bevy_asset", "bevy_scene", "bevy_gilrs", "bevy_winit", "animation", "x11", "png", "filesystem_watcher", "render", "serialize", ], default-features = false }
bevy_ecs_tilemap = "0.9.0"
leafwing-input-manager = "0.7.0"
iyes_loopless = { version = "0.9.1", features = ["states", "fixedtimestep", "app"] }
serde = { version = "1.0.125", features = ["derive"] }
rand = "0.8.5"
chrono = { version = "0.4.23", features = ["std", "serde"] }

[dev-dependencies]
bevy = { version = "0.9.*", features = ["bevy_asset", "bevy_scene", "bevy_gilrs", "bevy_winit", "animation", "x11", "png", "filesystem_watcher", "render", "serialize", "trace_chrome", "trace" ], default-features = false }
