[package]
name = "bevy_ggf"
version = "0.1.1"
authors = ["Noah Shomette <noahshomette@gmail.com>"]
edition = "2021"
description = "A framework for creating grid based games in bevy"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/NoahShomette/bevy_ggf"
exclude = ["assets/*", "design/*", "tools/*"]
resolver = "2"

[features]
default = []
command_rollback = []

# workspace for tests and assorted
[workspace]
members = ["tools/ci"]

[badges]
maintenance = { status = "actively-developed" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.10.*", features = ["bevy_scene", "bevy_gilrs", "bevy_winit", "serialize", ], default-features = false }
#bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", features = [], default-features = false }https://github.com/NoahShomette/bevy_ecs_tilemap
bevy_ecs_tilemap = { git = "https://github.com/NoahShomette/bevy_ecs_tilemap", features = [], default-features = false }
serde = { version = "1.0.125", features = ["derive"] }
rand = "0.8.5"
chrono = { version = "0.4.23", features = ["std", "serde"] }
parking_lot = "0.12.1"

[dev-dependencies]
bevy = { version = "0.10.*", features = ["bevy_asset", "bevy_scene", "bevy_gilrs", "bevy_winit", "animation", "x11", "png", "filesystem_watcher", "bevy_render", "serialize", "trace_chrome", "trace" ], default-features = false }
bevy_ascii_terminal = "0.12.4"
